# RAS-Baxter-Interface

./: .gitignore  README.md
RAS INFERFACE BAXTER WEBSITE/: ejemplo.html  index.html  jp_baxter_emotions.py  rm_Pos.html  rm_Pos_y_Nivel.html  rm_index.html  script.js  styles.css
baxter_ras_interface/: CMakeLists.txt  package.xml
baxter_ras_interface/launch/: robot.launch  robotbrazos.launch
baxter_ras_interface/scripts/: Avanzar_n_Estados_Correctos.py  Baxtermovimiento (another copy).py  Baxtermovimiento (copy).py  Baxtermovimiento.py  Baxtermovimiento2.py  Devolver_n_Estados_Correctos.py  Emociones.py  Emociones_Frecuencia_Baxter.py  Emociones_Leds_Baxter.py  Emociones_Ventiladores_Baxter.py  Emociones_baxter.py  Emociones_baxter_Sonido.py  Emociones_imagenes_baxter.py  Escalera.yaml  Escuchar_HRS.py  Funciones.py  Funciones2.py  Funciones3.py  Funciones4.py  Funciones5.py  Funciones6.py  Funciones_Solucion_Escalera.py  Funciones_Validacion.py  Funciones_baxter_movimiento.py  Gd_Calibra.py  Gd_Calibra1.py  Gd_Calibrar.py  Gd_Info_Object.py  Gd_List_Game.py  Gd_List_Game1.py  Gd_List_Game2.py  Gd_List_Game3.py  Gd__Auto_Info_Object.py  Gd_automatic.py  Gd_automatic2.py  Gd_kinect (another copy).py  Gd_kinect (copy).py  Gd_kinect.py  Gd_kinectdepth.py  Gd_ver_cubo.py  (+45 more)
baxter_ras_interface/share/Sounds/: Matriz_sonidos.py
baxter_ras_interface/srv/: AutoInfo.srv  Calibrado.srv  Coordenadas.srv  Coordinates.srv  Cor.srv  Info.srv  InfoCoor.srv  auxiliar.srv  infoz.srv  juego_dificultad.srv
